--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,6 @@
 ---
-title: "Kathleen Hablutzel"
-output:
-  html_document:
-    fig_height: 1.5
-    fig_width: 9
+title: " "
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -14,22 +11,12 @@ knitr::opts_chunk$set(
 library(tidyverse)
 ```
 
-```{r Data-Art, echo = FALSE} 
-data_art <- ggplot(data = midwest, aes(x = area, y = category)) +
-  geom_point(aes(color = percchildbelowpovert),
-             alpha = 0.6,
-             size = 1.5,
-             position = position_jitter(width = 0, height = 0.25)) +
-  scale_color_continuous(breaks = c(1975.25, 1994.25, 2013.25), # c() list of breaks
-                         labels = c(1975, 1994, 2013),
-                         low = "blue", high = "red") + # low and high colors
-  theme(text = element_blank(),
-        rect = element_blank(),
-        axis.line = element_blank(),
-        axis.ticks = element_blank(),
-        legend.position = "none")
+<br>
 
-data_art
-```
+<img src="images/headshot.jpg" align="left" height="200px" width="200px" hspace="20" />
 
-Hello World! :) Here's a website test!
+Hello! I'm Kathleen Hablutzel and I'm a double major in Computer Science & Statistical and Data Sciences (SDS) at Smith College ('23). I especially enjoy data visualization, data communication, and databases, and I love sharing data science enough that I built a [5-lesson introductory Data Science Bootcamp](krhablutzel.github.io/srip-bootcamp/) for high school students. 
+
+Currently, I volunteer as a Bluebonnet Data Fellow producing tactical field analyses for Cynthia Wallace’s Congressional campaign in North Carolina’s 9th district. I was drawn to Wallace’s campaign for the opportunity to apply data science to empower an underestimated campaign and flip a crucial Congressional district. I also research the history and politics of data analytics through Smith’s STRIDE Research Program, in conjunction with the Zollman Scholarship, Smith's highest merit scholarship. I am most proficient in R, Python, and Java, and have experience including SQL, HTML5, and supercomputing.
+
+When I'm not coding or nerding out over cool graphs, I enjoy building props and sets with the Smith College Theater Department and exploring 16^th^ century British politics.
