Fixed contact links

--- a/contact.Rmd
+++ b/contact.Rmd
@@ -11,5 +11,4 @@ knitr::opts_chunk$set(
 library(tidyverse)
 ```
 
-[GitHub](github.com/krhablutzel)
-[LinkedIn](linkedin.com/in/kathleen-hablutzel/)
+<a href="https://github.com/krhablutzel"><img src="images/GitHub.jpg" align="center" height="250px" width="250px" hspace="20" /></a><a href="https://www.linkedin.com/in/kathleen-hablutzel/"><img src="images/LinkedIn.jpg" align="center" height="250px" width="250px" hspace="20" /></a>
