--- a/contact.Rmd
+++ b/contact.Rmd
@@ -11,4 +11,6 @@ knitr::opts_chunk$set(
 library(tidyverse)
 ```
 
-<a href="https://github.com/krhablutzel"><img src="images/GitHub.png" align="center" height="250px" width="250px" hspace="20" /></a><a href="https://www.linkedin.com/in/kathleen-hablutzel/"><img src="images/LinkedIn.png" align="center" height="250px" width="250px" hspace="20" /></a>
+<br>
+
+<a href="https://github.com/krhablutzel"><img src="images/GitHub.png" align="left" height="200px" width="200px" hspace="20" /></a><a href="https://www.linkedin.com/in/kathleen-hablutzel/"><img src="images/LinkedIn.png" align="left" height="200px" width="200px" hspace="20" /></a>
