--- a/resume.Rmd
+++ b/resume.Rmd
@@ -21,7 +21,7 @@ library(tidyverse)
 #### Data Fellow, Cynthia Wallace for Congress
 ##### *June 2020 – Present*, Charlotte, NC
 * Perform tactical field analytics for Cynthia Wallace’s campaign in the NC-09 Congressional District
-* Identified over 2000 potential donors using the Python BeautifulSoup4 library for web scraping
+* Identified over 2000 potential donors from publicly available data sources using the Python BeautifulSoup4 library
 * Visualized demographic trends in the district using the ggplot2, sf, and leaflet packages in R
 
 <br>
@@ -29,7 +29,7 @@ library(tidyverse)
 ### STRIDE Research Program
 #### Research Assistant for Professor Brent Durbin
 ##### *Sept. 2019 – Present*, Northampton, MA
-* Explore the history and politics of data science, with a particular focus on the relationship between data and power
+* Explore the history and politics of data science and the tech industry, with a particular focus on the relationship between data and power
 * Investigate use of facial recognition systems for data-driven surveillance, with a focus on China and the US
 
 <br>
@@ -37,10 +37,11 @@ library(tidyverse)
 ### Summer Research & Innovation Program
 #### Program Assistant (North Carolina School of Science and Mathematics)
 ##### *June – Aug. 2018, 2019, 2020*, Durham, NC (North Carolina School of Science and Mathematics)
-* Developed 5-lesson R Data Science Bootcamp for over 25 students, including data visualization and data wrangling
-* Led redesign of the website architecture of the Research & Innovation Google Site
-* Built Python script to format 153 student projects into HTML5 backbone to showcase within Google Site
-* As program participant in 2018, implemented optimization algorithms in MATLAB and built edge detection programs in Python with OpenCV through an internship at the Duke University Zavlanos robotics laboratory
+*	Developed repeatable curriculum for an R Data Science Bootcamp, including data visualization and data wrangling
+*	Led redesign of the website architecture of the Research & Innovation Google Site
+*	Built Python script to format 153 student projects into HTML5 website backbone for student research showcase
+*	As program participant in 2018, implemented optimization algorithms in MATLAB and built edge detection programs in Python with OpenCV through an internship at the Duke University Zavlanos robotics laboratory
+
 
 <br>
 
@@ -65,7 +66,7 @@ library(tidyverse)
 
 * 4.79/4.0 GPA
 * **Research in Computational Science Program:** Trained in R, Python, MATLAB, supercomputing, and other tools
-* **Mathematics Department Award:** For excellence in 10 math courses and over 12 mathematical modeling projects
+* **Mathematics Department Award:** For excellence in 10 math courses and numerous mathematical modeling projects
 * **Mathematics Teaching Assistant:** Senior leadership position tutoring peers in Multivariable Calculus and other math
 
 <br>
@@ -74,13 +75,13 @@ library(tidyverse)
 
 ## Activities & Leadership
 
-**Props Internship:** Spearhead props design and construction for at least 5 Smith College theatrical productions
-
-**Reacting to the Past:** Negotiate support for historical legislation via debate and over 60 pages of speeches
-
 **Student Academic Advisor:** Advise 53 peers on academic success and course registration
 
-**Publication Editor-in-Chief, Broad Street Scientific & Fifth World:** Formatted 2 student research journals from theme design down to the smallest details
+**Props Internship:** Led props design and construction for multiple Smith College theatrical productions
+
+**Reacting to the Past:** Negotiated support for historical legislation via debate and persuasive public speaking
+
+**Publication Editor-in-Chief, Broad Street Scientific & Fifth World:** Managed publication of 2 student research journals from concept to final production
 
 **TEDx Committee Chairperson:** Coordinated 100-person TEDx conference with 5 speakers
 
@@ -90,10 +91,10 @@ library(tidyverse)
 
 ## Skills & Interests
 
-**Programming:** Python, R, Java, SQL, JavaScript, HTML5, CSS, MATLAB
+**Programming:** Python, R, Java, SQL, JavaScript, MATLAB
 
-**Tools:** Git/GitHub, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign
+**Tools:** Git/GitHub, HTML5/CSS, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign
 
 **Interests:** 16th Century British Politics, Cryptography, Theater
 
-**Awards:** M3 Challenge Technical Computing Scholarship Award, High School Mathematical Contest in Modeling Outstanding Winner, Smith College Dean’s List
+**Awards:** M3 Challenge Technical Computing Scholarship Award, High School Mathematical Contest in Modeling Outstanding Winner, Smith College Dean’s List, Arthur Ellis Hamm Prize Winner
