--- a/resume.Rmd
+++ b/resume.Rmd
@@ -15,32 +15,42 @@ library(tidyverse)
 
 PDF version available [here](./Kathleen_Hablutzel_Resume.pdf).
 
+<br>
+
+<br>
+
+## Skills & Interests
+
+**Programming:** Python, R, Java, SQL, JavaScript, MATLAB
+
+**Tools:** Git/GitHub, HTML5/CSS, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign
+
+<br>
+
+<br>
+
 ## Experience
 
 <br>
 
-### STRIDE Research Program
-#### Software Engineering Research Assistant
+### Software Engineering Research Assistant
+#### STRIDE Research Program
 ##### *Sept. 2020 – Present*, Northampton, MA
 
 * Refactor model management features in web-based requirements engineering goal modeling tool, [BloomingLeaf](https://github.com/amgrubb/BloomingLeaf),  using Java, JavaScript, JQuery, JSON, and HTML/CSS
 * Internship in the Grubb Software Engineering Lab
 
-#### Algorithms Teaching Assistant
+<br>
+
+### Algorithms Teaching Assistant
 ##### *Feb. 2021 — Present*, Northampton, MA
 
 * Tutor students in theory and implementation of common algorithms and algorithmic design techniques
 
-### STRIDE Research Program
-#### Data Science Policy Research Assistant
-##### *Sept. 2019 – Sept. 2020*, Northampton, MA
+<br>
 
-* Explored the history and politics of data science and tech industry, with a particular focus on the relationship between data and power, under Professor Brent Durbin
-* Investigated use of facial recognition systems for data-driven surveillance, with a focus on China and the US
-
-
-### Bluebonnet Data
-#### Data Fellow, Cynthia Wallace for Congress
+### Data Fellow, Cynthia Wallace for Congress
+#### Bluebonnet Data
 ##### *June – November 2020*, Charlotte, NC
 * Performed tactical field analytics for Cynthia Wallace’s campaign in the NC-09 Congressional District
 * Identified over 2000 potential donors from publicly available data sources using the Python BeautifulSoup4 library
@@ -48,10 +58,18 @@ PDF version available [here](./Kathleen_Hablutzel_Resume.pdf).
 
 <br>
 
+### Data Science Policy Research Assistant
+#### STRIDE Research Program
+##### *Sept. 2019 – Sept. 2020*, Northampton, MA
+
+* Explored the history and politics of data science and tech industry, with a particular focus on the relationship between data and power, under Professor Brent Durbin
+* Investigated use of facial recognition systems for data-driven surveillance, with a focus on China and the US
+
 <br>
 
-### Summer Research & Innovation Program
-#### Program Assistant (North Carolina School of Science and Mathematics)
+### Program Assistant
+#### Summer Research & Innovation Program
+#### North Carolina School of Science and Mathematics
 ##### *June – Aug. 2018, 2019, 2020*, Durham, NC (North Carolina School of Science and Mathematics)
 *	Developed repeatable curriculum for an R Data Science Bootcamp, including data visualization and data wrangling
 *	Led redesign of the website architecture of the Research & Innovation Google Site
@@ -74,7 +92,7 @@ PDF version available [here](./Kathleen_Hablutzel_Resume.pdf).
 * 4.0/4.0 GPA
 * **Zollman Scholarship:** Smith’s highest academic scholarship, awarded to fewer than 10 entering first-year students
 * **STRIDE Research Program:** Selective paid research assistant program, investigating data science policy
-* **Relevant Coursework:** Algorithms, Machine Learning, Communicating with Data, Data Structures, Theory of Computation, Digital History, Research Design and Analysis, Multiple Regression
+* **Relevant Coursework:** Algorithms, Machine Learning, Introduction to Data Science, Data Structures, Theory of Computation, Communicating with Data, Digital History, Research Design and Analysis, Multiple Regression, Linear Algebra
 
 <br>
 
@@ -84,6 +102,19 @@ PDF version available [here](./Kathleen_Hablutzel_Resume.pdf).
 * **Research in Computational Science Program:** Trained in R, Python, MATLAB, supercomputing, and other tools
 * **Mathematics Department Award:** For excellence in 10 math courses and numerous mathematical modeling projects
 * **Mathematics Teaching Assistant:** Senior leadership position tutoring peers in Multivariable Calculus and other math
+
+<br>
+
+<br>
+
+
+## Awards
+
+*	**Honorable Mention**, [The Undergraduate Statistics Project Competition](https://www.causeweb.org/usproc/usclap/2020/fall/winners), Intermediate Statistics
+*	Arthur Ellis Hamm Prize **Winner**
+*	Smith College **Dean’s List** 2019-2020
+*	**Technical Computing Scholarship Award**, [MathWorks Math Modeling Challenge](https://m3challenge.siam.org/archives/2019/winning-solutions)
+*	**Outstanding Winner** and **National Council of Teachers of Mathematics Winner**, [High School Mathematical Contest in Modeling](https://www.comap.com/highschool/contests/himcm/2018results.html)
 
 <br>
 
@@ -103,16 +134,11 @@ PDF version available [here](./Kathleen_Hablutzel_Resume.pdf).
 
 **TEDx Committee Chairperson:** Coordinated 100-person TEDx conference with 5 speakers
 
-<br>
 
 <br>
 
-## Skills & Interests
+<br>
 
-**Programming:** Python, R, Java, SQL, JavaScript, MATLAB
+## Other Interests
 
-**Tools:** Git/GitHub, HTML5/CSS, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign
-
-**Interests:** 16th Century British Politics, Cryptography, Theater
-
-**Awards:** M3 Challenge Technical Computing Scholarship Award, High School Mathematical Contest in Modeling Outstanding Winner, Smith College Dean’s List, Arthur Ellis Hamm Prize Winner
+16th Century British Politics, Cryptography, Theater
