updated projects menu and intro bio

--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,7 @@ library(tidyverse)
 
 <img src="images/headshot-Dec-2020.jpg" align="left" height="250px" width="250px" hspace="20" />
 
-Hello! I'm Kathleen Hablutzel and I'm a double major in Computer Science & Statistical and Data Sciences at Smith College ('23). I especially enjoy data visualization, data communication, and networks. I'm a software engineering intern in Smith's Grubb Lab, where I contribute to [BloomingLeaf](https://github.com/amgrubb/BloomingLeaf), a web-based tool for goal-oriented requirements engineering, and I'm also the TA for Smith's first-ever applied algorithms course. In the past, I've volunteered as a data scientist for a Congressional campaign (Cynthia Wallace in 2020) and built an [introductory data science course](srip-bootcamp/) for high school students. This upcoming Summer 2021, I will be an intern in Bank of America's Global Technology Sophomore Summer Analyst Program, and I can't wait to get started!
+Hello! I'm Kathleen Hablutzel and I'm a double major in Computer Science & Statistical and Data Sciences at Smith College (graduating May 2023). I especially enjoy cryptography, machine learning, data wrangling, and networks. I'm a software engineering intern in Smith's Grubb Lab, where I contribute to [BloomingLeaf](https://github.com/amgrubb/BloomingLeaf), a web-based tool for goal-oriented requirements engineering, and I'm also the TA for Smith's first-ever applied algorithms course. Over the summer of 2021, I was a data engineer for Bank of America's Corporate Treasury data warehouses through the Global Technology Sophomore Summer Analyst Program.
+In the past, I've also volunteered as a data scientist for a Congressional campaign (Cynthia Wallace in 2020) and built an [introductory data science course](srip-bootcamp/) for high school students at my alma mater, the North Carolina School of Science and Mathematics (go Unicorns!).
 
 When I'm not coding or nerding out over cool graphs, I enjoy building props and sets with the Smith College Theater Department, coding cryptographic ciphers, and exploring 16^th^ century British politics.
